--- a/index.html
+++ b/index.html
@@ -62,11 +62,6 @@
      <section class="carousel-section">
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
                     <div class="carousel-inner">
                       <div class="carousel-item carousel-img active">
                         <img src="./img/design-2148555_960_720.webp" class="d-block w-100 banner" alt="...">
@@ -87,55 +82,131 @@
                          </form>
                         </div>
                       </div>
-                      <div class="carousel-item carousel-img">
-                        <img src="./img/design-2148555_960_720.webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-flex flex-column justify-content-center h-100">
-                         <h3 class="text-danger display-3">Ukayching Marma</h3>
-                         <p class="font text-warning">Some representative placeholder content for the first slide.
-                              hi my name is Ukayching Marma. I'm From Bangladesh.
-                         </p>
-                         <form action="#" class="w-50 mx-auto">
-                             <div class="row">
-                                  <div class="col-8">
-                                       <input type="text" class="form-control form-control-md">
-                                  </div>
-                                  <div class="col-4">
-                                       <button type="submit"class="btn btn-danger btn-md px-5">Submit</button>
-                                  </div>
-                             </div>
-                        </form>
-                        </div>
-                      </div>
-                      <div class="carousel-item carousel-img">
-                        <img src="./img/design-2148555_960_720.webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-flex flex-column justify-content-center h-100">
-                         <h3 class="text-danger display-3">Ukayching Marma</h3>
-                          <p class="font text-warning">Some representative placeholder content for the first slide.
-                               hi my name is Ukayching Marma. I'm From Bangladesh.
-                          </p>
-                          <form action="#" class="w-50 mx-auto">
-                              <div class="row">
-                                   <div class="col-8">
-                                        <input type="text" class="form-control form-control-md">
-                                   </div>
-                                   <div class="col-4">
-                                        <button type="submit"class="btn btn-danger btn-md px-5">Submit</button>
-                                   </div>
-                              </div>
-                         </form>
-                        </div>
-                      </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
+              </div>    
+            </div>
      </section>
+     <!-- ------------Counter-section---------- -->
+     <!-- ------------Counter-section---------- -->
+     <section class="counter-section my-5">
+       <div class="container">
+         <div class="row text-center">
+           <div class="col-lg-3">
+             <p class="h2">100+</p>
+             <p>E-commerce Project</p>
+           </div>
+           <div class="col-lg-3">
+             <p class="h2">80+</p>
+             <p>Social Media Project</p>
+           </div>
+           <div class="col-lg-3">
+             <p class="h2">100+</p>
+             <p>Wordpress Project</p>
+           </div>
+           <div class="col-lg-3">
+             <p class="h2">90+</p>
+             <p>HTML/CSS/JavaScript Project</p>
+           </div>
+         </div>
+       </div>
+     </section>
+     <!-- ---------activity-section------------ -->
+     <!-- ---------activity-section------------ -->
+     <section class="activity-section py-5">
+       <div class="container">
+         <div class="row">
+           <div class="col-lg-8 d-flex flex-column justify-content-center">
+             <h3>Activity Goals To Improve Health</h3>
+             <p>Being active is important to our health, but how much or what kind of activity
+              do you need? Health Tracker App worked with the World Health Organisation to
+              develop two activity goals based on WHO's physical activity recommendations
+              shown to impact health Move Minutes and Heart Points</p>
+           </div>
+           <div class="col-lg-4">
+             <img src="./img/picture-2-removebg-preview.png" class="w-100 h-100 border border-warning border-bottom border-top-0 border-start-0 border-end-0 border-5 sh"  alt="">
+           </div>
+           <div class="col-lg-4">
+            <img src="./img/picture-3-removebg-preview.png" class="w-100 h-100 border border-warning border-bottom border-top-0 border-start-0 border-end-0 border-5 sh"  alt="">
+          </div>
+           <div class="col-lg-8 d-flex flex-column justify-content-center">
+             <h3>Activity Goals To Improve Health</h3>
+             <p>Being active is important to our health, but how much or what kind of activity
+              do you need? Health Tracker App worked with the World Health Organisation to
+              develop two activity goals based on WHO's physical activity recommendations
+              shown to impact health Move Minutes and Heart Points</p>
+           </div>
+         </div>
+       </div>
+     </section>
+     <!-- ------------future-section------------- -->
+     <!-- ------------future-section------------- -->
+     <section class="futrure-section py-5">
+       <h2 class="display-4 my-5 text-center">Our Feature Section</h2>
+       <div class="container">
+         <div class="row g-5">
+           <div class="col-lg-4 d-flex shadow rounded">
+             <div class="left-sec">
+              <img src="./img/senior-pharmacist-working-tablet-his-store_53419-11436.jpg" class="w-100 h-100 object-fit" alt="">
+             </div>
+             <div class="right-sec">
+               <h4 class="">Item-1</h4>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, consequuntur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, perspiciatis.</p>
+           </div>
+         </div>
+           <div class="col-lg-4 d-flex shadow rounded">
+             <div class="left-sec">
+              <img src="./img/senior-pharmacist-working-tablet-his-store_53419-11436.jpg" class="w-100 h-100 object-fit" alt="">
+             </div>
+             <div class="right-sec">
+               <h4 class="">Item-1</h4>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, consequuntur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, perspiciatis.</p>
+           </div>
+         </div>
+           <div class="col-lg-4 d-flex shadow rounded">
+             <div class="left-sec">
+              <img src="./img/senior-pharmacist-working-tablet-his-store_53419-11436.jpg" class="w-100 h-100 object-fit" alt="">
+             </div>
+             <div class="right-sec">
+               <h4 class="">Item-1</h4>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, consequuntur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, perspiciatis.</p>
+           </div>
+         </div>
+           <div class="col-lg-4 d-flex shadow rounded">
+             <div class="left-sec">
+              <img src="./img/senior-pharmacist-working-tablet-his-store_53419-11436.jpg" class="w-100 h-100 object-fit" alt="">
+             </div>
+             <div class="right-sec">
+               <h4 class="">Item-1</h4>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, consequuntur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, perspiciatis.</p>
+           </div>
+         </div>
+           <div class="col-lg-4 d-flex shadow rounded">
+             <div class="left-sec">
+              <img src="./img/senior-pharmacist-working-tablet-his-store_53419-11436.jpg" class="w-100 h-100 object-fit" alt="">
+             </div>
+             <div class="right-sec">
+               <h4 class="">Item-1</h4>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, consequuntur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, perspiciatis.</p>
+           </div>
+         </div>
+           <div class="col-lg-4 d-flex shadow rounded">
+             <div class="left-sec">
+              <img src="./img/senior-pharmacist-working-tablet-his-store_53419-11436.jpg" class="w-100 h-100 object-fit" alt="">
+             </div>
+             <div class="right-sec">
+               <h4 class="">Item-1</h4>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, consequuntur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, perspiciatis.</p>
+           </div>
+         </div>
+       </div>
+     </section>
+     <!-- ----------footer-section----------- -->
+     <!-- ----------footer-section----------- -->
+     <footer class="py-3 bg-dark">
+       <p class="text-center text-white">
+         &copy;Copyright Reserved by LFWF Academy
+       </p>
+     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
